Fix issue when log has only 1 line and it is long
Horizontal scroll was not working

--- a/src/components/LazyLog/index.module.css
+++ b/src/components/LazyLog/index.module.css
@@ -1,5 +1,5 @@
 .lazyLog {
-  overflow-x: scroll;
+  overflow: auto !important;
   font-family: "Monaco", monospace;
   font-size: 12px;
   margin: 0;
